--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     /* Path Aliases */
     "baseUrl": ".",
     "paths": {
-      "base/*": ["./src/*"]
+      "base/*": ["./src/*","./*"]
     }
   },
   "include": [
